# AnkiAutoCards

./: README.md  ankiautocards  setup.cfg  setup.py
ankiautocards/: __main__.py  ankiautocards.py  main.py
