[metadata]
name = ankiautocards
version = 0.0.1
author = rigobert9
author_email = francois.gallois.pro@gmail.com
description = A simple CLI tool to convert markdown files to Anki notes through multiple templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rigobert9/AnkiAutoCards
project_urls =
    Bug Tracker = https://github.com/rigobert9/AnkiAutoCards/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
packages = ankiautocards 
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
